# fx-cpp-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Component.cpp  Connection.h  CppRuntime.cpp  CppRuntime.h  Events.h  Json.h  Natives.h  README.md  Resource.h  Runtime.cpp  SDK.h  components.json  premake5.lua
.github/workflows/ci/: build_linux.sh
bridge/: fxmanifest.lua  server.js
cfx/: core.h  fxScripting.h
docs/: building.md  information.md
example/: CMakeLists.txt  fxmanifest.lua  server.cpp  server.lua
ext/: README.md
include/: CppComponentHost.h  CppScriptRuntime.h
resource_sdk/: Natives.h  Resource.h  SDK.h  msgpack.h
src/: Component.cpp  CppScriptRuntime.cpp  WASM.h
src/WASM/: Coroutine.h  Entry.h  Lifecycle.h
tools/: README.md  native_db.py
tools/ci/: deploy
tools/code-gen/: build.py
tools/example/: server.cpp
